; ModuleID = '/home/carl/AnghaBench/linux/drivers/nvmem/extr_core.c_nvmem_release.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nvmem/extr_core.c_nvmem_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.nvmem_device = type { i32 }

@nvmem_ida = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*)* @nvmem_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nvmem_release(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  %3 = alloca %struct.nvmem_device*, align 8
  store %struct.device* %0, %struct.device** %2, align 8
  %4 = load %struct.device*, %struct.device** %2, align 8
  %5 = call %struct.nvmem_device* @to_nvmem_device(%struct.device* %4)
  store %struct.nvmem_device* %5, %struct.nvmem_device** %3, align 8
  %6 = load %struct.nvmem_device*, %struct.nvmem_device** %3, align 8
  %7 = getelementptr inbounds %struct.nvmem_device, %struct.nvmem_device* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @ida_simple_remove(i32* @nvmem_ida, i32 %8)
  %10 = load %struct.nvmem_device*, %struct.nvmem_device** %3, align 8
  %11 = call i32 @kfree(%struct.nvmem_device* %10)
  ret void
}

declare dso_local %struct.nvmem_device* @to_nvmem_device(%struct.device*) #1

declare dso_local i32 @ida_simple_remove(i32*, i32) #1

declare dso_local i32 @kfree(%struct.nvmem_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
